[package]
name = "moppler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poppler = "0.3.2"
gtk = { version = "0.4.8", package = "gtk4" }
cairo-rs = "0.15.12"
rand = "0.7.3"
glib-macros = "0.15"
gio = "0.15.11"
glib = "0.15.11"
